# infinity

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  NOTICE  README.md  THIRD-PARTY  about.hbs  about.toml  check.bash  clippy.toml  precheck.bash  rap-servers.example.json
agent/: README.md  cdk.json  (+3 more)
crates/infinity-agent-cli/: Cargo.toml
crates/infinity-agent-cli/src/: acp_server.rs  choice_picker.rs  component.rs  daemon_client.rs  inline_viewport.rs  install.rs  lib.rs  main.rs  mcp_proxy.rs  memory_store.rs  model_picker.rs  modifier_diff.rs  quit_picker.rs  rap_callback.rs  rap_tools.rs  sanitize.rs  session_picker.rs  session_store.rs  set_title_tool.rs  sleep_tools.rs  term_io.rs  terminal.rs  text_input.rs  token_usage.rs
crates/infinity-agent-cli/tests/: e2e_daemon_tui.rs  tui_flow_snapshots.rs  tui_reflow_snapshots.rs  tui_snapshots.rs  tui_submit_wrap_snapshots.rs  tui_viewport_snapshots.rs  tui_widechar_snapshots.rs
crates/infinity-agent-cli/tests/common/: mod.rs
crates/infinity-agent-cli/tests/snapshots/: e2e_daemon_tui__e2e_after_busy_finish.snap  e2e_daemon_tui__e2e_image_tool_result.snap  e2e_daemon_tui__e2e_mid_thinking_after_reconnect.snap  e2e_daemon_tui__e2e_mid_thinking_finished.snap  e2e_daemon_tui__e2e_mid_thinking_live.snap  e2e_daemon_tui__e2e_model_picker.snap  e2e_daemon_tui__e2e_model_switched.snap  e2e_daemon_tui__e2e_model_switched_response.snap  e2e_daemon_tui__e2e_quit_picker_busy.snap  e2e_daemon_tui__e2e_response_done.snap  e2e_daemon_tui__e2e_streaming.snap  e2e_daemon_tui__e2e_title_set.snap  e2e_daemon_tui__e2e_welcome.snap  tui_flow_snapshots__ansi_sanitized.snap  tui_flow_snapshots__ansi_tool_result_stripped.snap  tui_flow_snapshots__child_closed_row_removed.snap  tui_flow_snapshots__child_subscription_prefix.snap  tui_flow_snapshots__choices_all_dismissed.snap  tui_flow_snapshots__command_feedback.snap  tui_flow_snapshots__diff_tool_result.snap  tui_flow_snapshots__empty_tool_result.snap  tui_flow_snapshots__first_choice_shown.snap  tui_flow_snapshots__lazy_new_session.snap  tui_flow_snapshots__paste_in_input.snap  tui_flow_snapshots__picker_after_update.snap  tui_flow_snapshots__picker_initial_list.snap  tui_flow_snapshots__quit_picker_cancelled.snap  tui_flow_snapshots__quit_picker_open.snap  tui_flow_snapshots__replay_burst.snap  tui_flow_snapshots__replay_keeps_context_usage.snap  tui_flow_snapshots__replay_then_live.snap  tui_flow_snapshots__second_choice_shown.snap  tui_flow_snapshots__waiting_for_choice_sorted_top.snap  tui_reflow_snapshots__coalesced_resizes.snap  tui_reflow_snapshots__deep_scrollback_80.snap  tui_reflow_snapshots__deep_scrollback_back_80.snap  tui_reflow_snapshots__deep_scrollback_narrow_50.snap  tui_reflow_snapshots__mid_stream_after_shrink.snap  tui_reflow_snapshots__mid_stream_before.snap  tui_reflow_snapshots__picker_before_resize.snap  (+82 more)
crates/infinity-agent-core/: Cargo.toml
crates/infinity-agent-core/src/: batch_processor.rs  default_prompt.md  event_processor.rs  lib.rs  message.rs  model_provider.rs  rap_notifier.rs  test_helpers.rs  traits.rs
crates/infinity-agent-core/src/model_provider/: mod.rs  remote.rs
crates/infinity-agent-core/src/snapshots/: infinity_agent_core__event_processor__tests__associative_subscription_event_inlined.snap  infinity_agent_core__event_processor__tests__associative_subscription_event_inlined.snap.new  infinity_agent_core__event_processor__tests__associative_subscription_event_tool_interruption.snap  infinity_agent_core__event_processor__tests__associative_subscription_event_tool_interruption.snap.new  infinity_agent_core__event_processor__tests__consecutive_text_chunks_are_coalesced-2.snap  (+13 more)
crates/infinity-agent-lambda/: Cargo.toml
crates/infinity-agent-lambda/src/: conversation_history.rs  event_handler.rs  main.rs  state_store.rs
crates/infinity-daemon/: Cargo.toml  build.rs
crates/infinity-daemon/src/: client_handler.rs  config.rs  ids.rs  lib.rs  main.rs  mcp_proxy.rs  memory_store.rs  migrate.rs  model_picker.rs  models.rs  rap_callback.rs  rap_tools.rs  remote.rs  session.rs  session_store.rs  set_title_tool.rs  sleep_tools.rs  web_assets.rs  ws_handler.rs
crates/infinity-daemon/tests/: mcp_proxy_callback.rs  web_e2e.rs
crates/infinity-protocol/: Cargo.toml
crates/infinity-protocol/src/: lib.rs
crates/infinity-provider-bedrock/: Cargo.toml
crates/infinity-provider-bedrock/src/: lib.rs  main.rs
crates/infinity-provider-protocol/: Cargo.toml
crates/infinity-provider-protocol/src/: lib.rs  remote.rs
crates/infinity-slack-bot/: Cargo.toml
crates/infinity-slack-bot/examples/: deploy.rs
crates/infinity-slack-bot/src/: config.rs  daemon_client.rs  daemon_sidecar.rs  flow.rs  lib.rs  runtime.rs  session_store.rs  sidecar.rs  slack_client.rs
crates/infinity-slack-bot/tests/: dataflow_sim.rs
crates/rap-client/: Cargo.toml
crates/rap-client/src/: callback_server.rs  http.rs  lib.rs  notifier.rs  toolset_loader.rs
crates/rap-github-event-poller/: Cargo.toml
crates/rap-github-event-poller/src/: lib.rs  main.rs
crates/rap-protocol/: Cargo.toml
crates/rap-protocol/src/: lib.rs
crates/rap-test-servers/: Cargo.toml
crates/rap-test-servers/src/: lib.rs
crates/rig-mock/: Cargo.toml
crates/rig-mock/src/: lib.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: callback.rs  error.rs  git.rs  jj.rs  lib.rs  metadata.rs  sandbox.rs  server.rs  types.rs
crates/sandbox-local/: Cargo.toml  build.rs
crates/sandbox-local/scripts/: install-bwrap.sh
crates/sandbox-local/src/: backend.rs  lib.rs  main.rs  metadata.rs  providers.rs  server.rs
crates/sandbox-local/tests/: .execute_command.rs.pending-snap  bookmark_moved_externally.rs  clone_repo_switch.rs  common.rs  describe_changes.rs  edit_file.rs  execute_after_init.rs  execute_command.rs  jj_colocated.rs  migrate.rs  nested_repo_root.rs  read_file_image.rs  stale_workspace.rs  stale_workspace_cleanup.rs  subagent_no_squash.rs  tmpdir_stable.rs
crates/sandbox-remote/: Cargo.toml
crates/sandbox-remote/src/: backend.rs  lib.rs  main.rs  metadata.rs  sigv4_client.rs
(+345 files in other folders)
