[workspace]
members = [
    "crates/infinity-agent-core",
    "crates/infinity-agent-lambda",
    "crates/infinity-agent-cli",
    "crates/sandbox-core",
    "crates/sandbox-local",
    "crates/sandbox-remote",
    "crates/rap-protocol",
    "crates/rap-client",
    "crates/rap-steering-server",
    "crates/rap-github-event-poller",
    "crates/infinity-protocol",
    "crates/infinity-daemon",
    "crates/rig-mock",
]
resolver = "2"

[workspace.dependencies]
# Shared
rig-core = { version = "0.31", default-features = false }
rig-bedrock = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync"] }
futures-util = "0.3"
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
rhai = { version = "1", features = ["no_optimize"] }

# AWS crates
aws-sdk-dynamodb = { version = "1", default-features = false }
aws-sdk-sqs = { version = "1", default-features = false }
aws-sdk-scheduler = { version = "1", default-features = false }
aws-sdk-dsql = { version = "1", default-features = false }
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-types = { version = "1", default-features = false }
aws-sigv4 = { version = "1", default-features = false }
aws-credential-types = { version = "1", default-features = false }
aws-smithy-runtime-api = { version = "1", default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "json", "chrono", "uuid"] }

# Sandbox crates
similar = "2"
which = "8"
thiserror = "2"
tempfile = "3"
axum = "0.8"
insta = { version = "1", features = ["json", "redactions"] }

[patch.crates-io]
rig-bedrock = { path = "crates/rig-bedrock-patched" }
