[package]
name = "infinity-agent-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "infinity"
path = "src/main.rs"

[dependencies]
infinity-agent-core = { path = "../infinity-agent-core" }

rig-core = { workspace = true }
rig-bedrock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "io-std", "sync", "process"] }
futures-util = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
unicode-width = "0.2"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
rhai = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
