[package]
name = "infinity-agent-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rap-client = { path = "../rap-client" }
rap-protocol = { path = "../rap-protocol" }
infinity-provider-protocol = { path = "../infinity-provider-protocol" }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
futures-util = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
rhai = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
rig-mock = { path = "../rig-mock" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
futures-util = { workspace = true, features = ["sink"] }

[lints]
workspace = true
