[package]
name = "infinity-agent-lambda"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "infinity-agent-lambda"
path = "src/main.rs"

[dependencies]
infinity-agent-core = { path = "../infinity-agent-core" }
infinity-provider-bedrock = { path = "../infinity-provider-bedrock" }
rap-client = { path = "../rap-client" }

rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

lambda_runtime = "1"
aws_lambda_events = { version = "1", default-features = false, features = ["sqs"] }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-scheduler = { workspace = true }
aws-sdk-dsql = { workspace = true }
aws-config = { workspace = true }
aws-types = { workspace = true }
aws-sigv4 = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true
