[package]
name = "infinity-daemon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "infinity_daemon"
path = "src/lib.rs"

[[bin]]
name = "infinity-daemon"
path = "src/main.rs"

[dependencies]
infinity-agent-core = { path = "../infinity-agent-core" }
infinity-protocol = { path = "../infinity-protocol" }
rap-client = { path = "../rap-client" }
rap-protocol = { path = "../rap-protocol" }

rig-core = { workspace = true }
rig-bedrock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "sync", "process", "net", "signal", "macros"] }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
dirs = "6"
tokio-tungstenite = "0.26"
include_dir = { version = "0.7", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
rig-mock = { path = "../rig-mock" }
insta = { workspace = true }

[features]
bundled-web = ["dep:include_dir"]

[lints]
workspace = true
