[package]
name = "infinity-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
rap-protocol = { path = "../rap-protocol" }
tokio-util = { version = "0.7", features = ["codec"] }

[lints]
workspace = true
