[package]
name = "infinity-provider-bedrock"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
infinity-agent-core = { path = "../infinity-agent-core" }
aws-config = { version = "*", default-features = false, features = ["credentials-process"] }
rig-core = { workspace = true }
rig-bedrock = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
