[package]
name = "infinity-provider-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
futures-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { workspace = true }

[dev-dependencies]
rig-mock = { path = "../rig-mock" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
