[package]
name = "rap-github-event-poller"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rap-protocol = { path = "../rap-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
