[package]
name = "rap-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
