[package]
name = "rig-mock"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
async-stream = "0.3"

[lints]
workspace = true
