[package]
name = "sandbox-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rap-protocol = { path = "../rap-protocol" }
base64 = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "io-util", "time", "sync", "fs"] }
axum = { workspace = true, features = ["multipart"] }
reqwest = { workspace = true, features = ["multipart"] }
tracing = { workspace = true }
similar = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[lints]
workspace = true
