[package]
name = "sandbox-local"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rap-sandbox-local"
path = "src/main.rs"

[dependencies]
sandbox-core = { path = "../sandbox-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
