[package]
name = "sandbox-local"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
sandbox-core = { path = "../sandbox-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
nix = { version = "0.31", features = ["process"] }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rap-client = { path = "../rap-client" }
rap-protocol = { path = "../rap-protocol" }
reqwest = { workspace = true }
regex = "1"

[lints]
workspace = true
